# bombolab

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  book.toml  introduction.html  print.html  searcher-09f2665d.js  searchindex-572f17a6.js  searchindex-7facaa62.js  toc-62e7cb07.js  toc.html
.github/workflows/: book.yml
api/: core.html
architecture/: design-decisions.html  project-structure.html
cli/: dh-solve.html  quaternion-solve.html
contributing/: development.html  guidelines.html
core-concepts/: dh-parameters.html  forward-kinematics.html  robot-model.html
crates/bombolab-core/: Cargo.toml
crates/bombolab-core/src/: lib.rs
crates/bombolab-core/src/domain/: chain.rs  joint.rs  mod.rs
crates/bombolab-core/src/kinematics/: dh_parameters.rs  forward.rs  hmatrix.rs  init.rs  mod.rs
crates/bombolab-core/src/math/: constants.rs  dh.rs  hmatrix.rs  isometry.rs  mod.rs  quaternion.rs
crates/bombolab-core/src/robot/: errors.rs  joint.rs  link.rs  mod.rs  segment.rs
crates/bombolab-gui/: Cargo.toml
crates/bombolab-gui/src/: lib.rs
docs/: forward_kinematics.md
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: core.md
docs/src/architecture/: design-decisions.md  project-structure.md
docs/src/cli/: dh-solve.md  quaternion-solve.md
getting-started/: installation.html  quick-start.html
src/: main.rs
src/domain/: base.rs  chain.rs  errors.rs  joint.rs  link.rs  mod.rs
src/kinematics/: dh_parameters.rs  hmatrix.rs  init.rs  mod.rs
src/ui/: main_page.rs  mod.rs  state.rs
(+9 files in other folders)
