[package]
name = "bombolab-core"
version = "0.1.0"
edition = "2024"
description = "Core data model and kinematics for Bombolab"
license = "MIT"

[[bin]]
name = "dh-solve"
path = "src/bin/dh-solve.rs"

[[bin]]
name = "quaternion-solve"
path = "src/bin/quaternion-solve.rs"

[dependencies]
nalgebra = "0.35.0"
